objects/Sales_Aid_Question__c.object
<CustomObject>
    <fields>
        <fullName>Questions__c</fullName>
        <label>Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success Plan</fullName>
                </value>
                <value>
                    <fullName>Success Plan Old</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>category</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>options</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Aid Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Questions__c</columns>
        <columns>category__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>Stage__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Success Plan</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SAQ-{000}</displayFormat>
        <label>Sales Aid Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Aid Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>